--- a/Library.Api/appsettings.json
+++ b/Library.Api/appsettings.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "DefaultConnection": {
-    "ConnectionString": "mongodb://127.0.0.1:27017/library",
+    //"ConnectionString": "mongodb://127.0.0.1:27017/library",
+    "ConnectionString": "mongodb+srv://emma:%40A1234567@lawyerpp-cluster-5faak.mongodb.net/EdgeAppraisal?retryWrites=true&w=majority",
     "DataBaseName": "library"
   },
   "JwtOptions": {
